--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="container">
           <h2 class="text-center">About Me</h2>
           <div class="row text-center mb-3">
-            <div class="col-6 mt-4"><img src="/asset/gambar/char 4.jpg" alt="potoku" class="img-fluid"></div>
+            <div class="col-6 mt-4"><img src="/asset/gambar/1662202955-picsay (1).png" alt="potoku" class="img-fluid rounded img-thumbnail "></div>
             <div class="col-6 mt-4">
               <p>Hi everyone, my name is <b>Mirza Maulana Fauzian Risky</b>. I'm a Junior Front End Devoloper, i'm Student in SMK Muhammadiyah 1 Sukoharjo.
               <br><br>
