--- a/index.html
+++ b/index.html
@@ -74,8 +74,9 @@
         <div class="container">
           <h2 class="text-center">About Me</h2>
           <div class="row text-center mb-3">
-            <div class="col-6 mt-4"><img src="/asset/gambar/1662202955-picsay (1).png" alt="potoku" class="img-fluid rounded img-thumbnail "></div>
-            <div class="col-6 mt-4">
+            <div class="col mt-4 mb-3"><img src="/asset/gambar/1662202955-picsay (1).png" alt="potoku" class="img rounded">
+            </div>
+            <div class="col mt-4">
               <p>Hi everyone, my name is <b>Mirza Maulana Fauzian Risky</b>. I'm a Junior Front End Devoloper, i'm Student in SMK Muhammadiyah 1 Sukoharjo.
               <br><br>
               I live in Karanganyar, Indonesia. I was born in Karanganyar, 15 January 2006. I'm 16 years old. I'm an Software Engineer Student from SMK Muhammadiyah 1 Sukoharjo.
